--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -357,41 +357,212 @@
       <a name="3.7"></a>
       <h3 class="subTitulo">Estructuras de repetición</h3>
       <article>
-        
-        
+        <p>
+          Las estructuras de repetición siempre se ejecutan mediante el uso de bucles. Estos permiten que una o varias líneas se ejecuten de forma repetida. Y se repiten mientras que se cumpla la condición de salida.
+        </p>
+        <h4>Mientras (While)</h4>
+        <p>
+          Mientras CONDICION hacer <br>
+            Instrucción_1; <br>
+            Instrucción_2; <br>
+            ModificarCondición; <br>
+          FinMientras; <br>
+        </p>
+        <h4>Hacer... mientras (Do... while)</h4>
+        <p>
+          Hacer <br>
+            Instrucción_1; <br>
+            Instrucción_2; <br>
+            ModificarCondición; <br>
+          Mientras CONDICION; <br>
+        </p>
+        <h4>Para</h4>
+        <p>
+          Para CONDICION <br>
+          Instrucción_1; <br>
+          Instrucción_2; <br>
+          ModificarCondición; <br>
+        </p>
+        <h4>Foreach</h4>
+        <p>
+          Ejecuta una instrucción o bloque de intrucciones para cada elemento de cientas estructuras de datos como arrays o listas.
+        </p>
       </article>
       <a class="btnArriba" href="#top">Arriba</a>
     </section>
     <!--*************************************************************-->
-    <a name="3.8"></a>
-    <article>
+    <section>
+      <a name="3.8"></a>
       <h3 class="subTitulo">Estructuras de salto</h3>
+      <article>
+        <p>
+          Son aquellas que detienen la ejecución de alguna de las sentencias de control de nuestro programa.
+        </p>
+        <h4>break</h4>
+        <p>
+          Interrumpe el bucle indicando que debe continuar a partir de la siguiente sentencia después del bloque del ciclo. <br>
+          El control se devuelve a la instrucción que haya a continuación de la intrucción finalizada.
+        </p>
+      </article>
+      <h4>continue</h4>
+      <p>
+        Se utiliza en sentencias repetitivas con bucles for, foreach, while y do...while. Transfiere el control a la siguiente iteración.
+      </p>
+      <h4>return</h4>
+      <p>
+        Esta estructura de salto obliga a que finalice la ejecución de una determinada función. Se utiliza para devolver el control a la función de llamada.
+      </p>
       <a class="btnArriba" href="#top">Arriba</a>
-    </article>
+    </section>
     <!--*************************************************************-->
-    <a name="3.9"></a>
-    <article>
+    <section>
+      <a name="3.9"></a>
       <h3 class="subTitulo">Tratamiento de cadenas</h3>
+      <article>
+        <p>
+          Una cadena es un objeto de tipo string. Se utiliza la palabra reservada string. Siempre que queramos escribir combinaciones alfanuméricas, irán entre comillas dobles, ya que el compilador las tomará como un tipo string.
+        </p>
+        <h4>new</h4>
+        <p>
+          El operador new crea una nueva instancia de un tipo. <br>
+          La palabra new crea un objeto tipo string al que pasamos el parámetro letras como una tabla de caracteres. <br>
+        </p>
+        <table>
+          <tr>
+            <td>Método</td>
+            <td>Descripción</td>
+          </tr>
+          <tr>
+            <th>Length</th>
+            <th>Devuelve el número de caracteres</th>
+          </tr>
+          <tr>
+            <th>ToCharArray()</th>
+            <th>Convierte un string en array de caracteres</th>
+          </tr>
+          <tr>
+            <th>SubString()</th>
+            <th>Extrae parte de una cadena. Puede ser sobrecargado indicando su inicio y su fin: SubString(int inicio) o SubString (int inicio, int tamaño)</th>
+          </tr>
+          <tr>
+            <th>CopyTo()</th>
+            <th>Copia un número de caracteres especificados a una determinada posición del SubString</th>
+          </tr>
+          <tr>
+            <th>CompareTo()</th>
+            <th>Compara la cadena que contiene el string con otra pasada por parámetro. <br> Devuelve un entero que indica se la posición de esta instancia es anterior, posterior o igual que la posición del string</th>
+          </tr>
+          <tr>
+            <th>Contains()</th>
+            <th>Si la cadena que se le pasa por parámetro forma parte del string, devuelve un booleano</th>
+          </tr>
+          <tr>
+            <th>IndexOf()</th>
+            <th>Si aparece un carácter especificado en el string, devuelve el índice de la posición de la primera vez que aparece. Devuelve -1 si el carácter no se encuentra en la cadena.</th>
+          </tr>
+          <tr>
+            <th>Insert()</th>
+            <th>Inserta una cadena de caracteres en una posición concreta del string.</th>
+          </tr>
+          <tr>
+            <th>Trim()</th>
+            <th>Quita todos los espacios en blanco del principio y el final de la cadena de caracteres</th>
+          </tr>
+          <tr>
+            <th>Replace()</th>
+            <th>Devuelve una cadena, donde se ha sustituido un carácter por otros</th>
+          </tr>
+          <tr>
+            <th>Remove()</th>
+            <th>Devuelve una cadena donde se ha eliminado un número de caracteres especificado</th>
+          </tr>
+          <tr>
+            <th>Split()</th>
+            <th>Ofrece la posibilidad de separar en varias partes una cadena de caracteres</th>
+          </tr>
+          <tr>
+            <th>ToLower()</th>
+            <th>Devuelve una cadena convertida en minúsculas</th>
+          </tr>
+          <tr>
+            <th>ToUpper()</th>
+            <th>Devuelve una cadena convertida en mayúsculas</th>
+          </tr>
+        </table>
+      </article>
       <a class="btnArriba" href="#top">Arriba</a>
-    </article>
+    </section>
     <!--*************************************************************-->
-    <a name="3.10"></a>
-    <article>
+    <section>  
+      <a name="3.10"></a>
       <h3 class="subTitulo">Depuración de errores</h3>
+      <article>
+        <p>
+          Llegados a esta etapa, nuestro objetivo será descubrir todos los errores que existan e intentar solucionarlos de la mejor forma posible. <br>
+          Hay tres tipos de errores diferentes:
+        </p>
+        <ul>
+          <li><b>Compilación o sintaxis:</b> errores en el código</li>
+          <li><b>Tiempo de ejecución:</b> los que producen un fallo a la hora de ejecutar el programa. Son fragmentos de código que parecen estar correctos y que no tienen ningún error de sintaxis, pero que no se ejecutarán.</li>
+          <li><b>Lógicos:</b> aquellos que dan resultados erróneos, diferentes a los esperados o no deseados, en respuesta a las acciones del usuario. Los más difíciles de corregir, ya que no siempre está claro dónde se originan.</li>
+        </ul>
+        <p>
+          Para depurar errores, tenemos la opción de poner un punto de interrupción en una determinada línea de código, presionando F9. Para ejecutar la aplicación debemos presionar F5, se detiene en la línea y podremos examinar cuánto valen las variables para ir realizando su seguimiento, o podemos comprobar cuándo finalizan los bucles. Para depurar el código paso a paso F10.
+        </p>
+        <ul>
+          <li><b>Errores de compilación:</b> Impiden la ejecución. Inicialmente se compila el programa y si el compilador encuentra cualquier cosa que no entiende, lanza un error. Casi todos se producen mientras escribimos en código.</li>
+          <li><b>Errores en tiempo de ejecución:</b> Aparecen mientras se ejecuta el programa, cuando se pretende realizar una operación que no lleva a ninguna solución.</li>
+          <li><b>Errores lógicos:</b> El código se puede compilar y ejecutar sin problema, pero, en el caso de que compile, devuelve algo que no era la solución que se esperaba. Su corrección es más difícil, tenemos que encontrar el error en un programa que sí funciona, pero que funciona de forma diferente a la que debería.</li>
+        </ul>
+      </article>
       <a class="btnArriba" href="#top">Arriba</a>
-    </article>
+    </section>
     <!--*************************************************************-->
-    <a name="3.11"></a>
-    <article>
+    <section>
+      <a name="3.11"></a>
       <h3 class="subTitulo">Documentación de programas</h3>
+      <article>
+        <p>
+          Debemos elaborar una memoria para que quede registrado todo el desarrollo que hemos llevado a cabo, los fallos que ha presentado y cómo hemos conseguido solventarlos. <br>
+          Los ficheros deben estar testeados y funcionar correctamente.
+        </p>
+        <h4>summary</h4>
+        <p>
+          La etiqueta summary debe usarse para describir un tipo y para agregar información adicional dentro de nuestro código.
+        </p>
+      </article>
       <a class="btnArriba" href="#top">Arriba</a>
-    </article>
+    </section>
     <!--*************************************************************-->
-    <a name="3.12"></a>
-    <article>
+    <section>
+      <a name="3.12"></a>
       <h3 class="subTitulo">Entornos de desarrollo de programas</h3>
+      <article>
+        <p>
+          Podemos denominar entorno de desarrollo integrado (IDE), al entorno de programación que hemos utilizado para su realización: editor de código, compilador, depurador e interfaz gráfica. <br>
+          Deben cumplir una serie de características:
+        </p>
+        <ul>
+          <li>Son multiplataforma</li>
+          <li>Actúan como soporte para diferentes lenguales de programación</li>
+          <li>Reconocen sintaxis</li>
+          <li>Están integrados con sistemas de control de diferentes versiones</li>
+          <li>Tienen un depurados</li>
+          <li>Permiten importar y exportar proyectos</li>
+          <li>Manejan diferentes idiomas</li>
+          <li>Facilitan un manual de ayuda para el usuario</li>
+        </ul>
+        <p>Las diferentes ventajas:</p>
+        <ul>
+          <li>Presentan una baja curava de aprendizaje</li>
+          <li>Son de uso óptimo para usuarios que son expertos</li>
+          <li>Formatean el código</li>
+          <li>Usan funciones para renombrar funciones y variables</li>
+          <li>Permiten crear proyectos</li>
+          <li>Muestran en pantalla errores y warnings</li>
+        </ul>
+      </article>
       <a class="btnArriba" href="#top">Arriba</a>
-    </article>
-  </section>
+    </section>
 </body>
 </html>
